src/objects/LogicMelonXMLTag__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the XML tag used in LogicMelon and BroadBean</description>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>DefaultValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTag__c</fullName>
        <label>EndTag</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <description>This stores the Field api from whre to get value</description>
        <label>FieldAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>RecordTypeName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTag__c</fullName>
        <label>StartTag</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LogicMelonXMLTag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartTag__c</columns>
        <columns>EndTag__c</columns>
        <columns>DefaultValue__c</columns>
        <columns>RecordTypeName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>